swagger notes
